environment/k8s-azure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  labels:
    app: django
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - image: nathivitas/demo:156
          name: django
          ports:
            - containerPort: 8000
              name: gunicorn
