environment/django-svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: django-django-demo
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: django
