environment/django-ingress.yaml
kind: Ingress
apiVersion: v1
metadata:
  name: demo-ingress
  namespace: default
  spec:
   
  rules:
   
    - host: demo.info
   
      http:
   
        paths:
   
          - path: /
   
            pathType: Prefix
   
            backend:
   
              service:
   
                name: demo
   
                port:
   
                  number: 8000
